--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,17 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
   <h1>{{ heading_1 }}</h1>
-  {% for onegai in all_onegai %}
-    <p>{{onegai.title}}：{{onegai.body}}（{{onegai.date}}）</p>
+  
+  {% for l in all_log %}
+    <p>{{l.log}}：（{{l.date}}）</p>
   {% endfor %}
-  <form action="/add" method="post">
-    <input type="text" name="title" placeholder="title">
-    <input type="text" name="body" placeholder="body">
-    <input type="submit" value="Add">
-  </form>
-
-  <p id="log"></p>
-  <button id="s_button">LOG</button>
 
   <p id="logTitle"></p>
 
